kubernetes/apps/vaultwarden/middlewares.yaml
---
# Used to unset the `X-Frame-Options` header, as required by Vaultwarden for 2FA
# connector calls.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unset-frame-options
  namespace: vaultwarden
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: ""
---
# Used to deny access to `/admin` (need to kubectl port-forward)
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-deny
  namespace: vaultwarden
spec:
  ipAllowList:
    sourceRange:
      - "127.0.0.1/32" # no matches
