kubernetes/apps/vaultwarden/ingressroute-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-public
  namespace: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/provider: cloudflare
    external-dns.alpha.kubernetes.io/hostname: vaultwarden.dmhosted.com
    external-dns.alpha.kubernetes.io/target: b8f93036-6de6-4d1c-a590-bdbf64f990ad.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    # Block /admin on the public route entirely - see middlewares.yaml
    - match: Host(`vaultwarden.dmhosted.com`) && PathPrefix(`/admin`)
      kind: Rule
      priority: 200
      middlewares:
        - name: vaultwarden-deny
      services: # not actually used
        - name: vaultwarden
          port: 80
    # NOTE: required to make 2FA work properly - unset header `X-Frame-Options`
    # Overrides default headers
    - match: Host(`vaultwarden.dmhosted.com`) && PathRegexp(`^/[a-z0-9-]*connector\.html%`)
      kind: Rule
      priority: 100
      middlewares:
        - name: unset-frame-options
      services:
        - name: vaultwarden
          port: 80
    - match: Host(`vaultwarden.dmhosted.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-public-cert
