kubernetes/apps/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-internal
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-internal-cert
